feat(autoarchive): create archival job after transfer succeeded
